--- a/css/main.css
+++ b/css/main.css
@@ -225,15 +225,6 @@ body::after {
     margin: 1rem 0;
 }
 
-@media (max-width: 768px) {
-    .business-card {
-        padding: 2rem;
-    }
-
-    .card-name {
-        font-size: 2rem;
-    }
-}
 
 /* Portals Section */
 
@@ -258,6 +249,7 @@ body::after {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 2rem;
 }
 
@@ -440,4 +432,82 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+/* Mobile Support */
+
+@media (max-width: 900px) {
+    .bottom-nav-container {
+        gap: 3rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .business-card {
+        padding: 2rem;
+        margin: 2rem;
+        margin-top: 4rem;
+    }
+
+    .card-name {
+        font-size: 2rem;
+    }
+
+    .card-name > span {
+        font-size: 1.25rem;
+        display: block;
+        padding-left: 0;
+        margin-top: 0.5rem;
+    }
+
+    .card-title {
+        font-size: 1.1rem;
+    }
+
+    .card-info {
+        margin-top: 1.5rem;
+        font-size: 0.9rem;
+    }
+
+    .info-item {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.25rem;
+    }
+
+    .info-item .additional {
+        font-size: 0.8rem;
+    }
+
+    .bottom-nav-container {
+        flex-direction: column;
+        gap: 2rem;
+        height: auto;
+        padding: 2rem;
+        margin-bottom: 4rem;
+        text-align: center;
+        border: none;
+    }
+
+    .bottom-nav a {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .business-card {
+        margin: 1rem;
+        padding: 1.5rem;
+    }
+
+    .card-name {
+        font-size: 1.75rem;
+    }
+
+    .bottom-nav-container {
+        padding: 1.5rem;
+        gap: 1.5rem;
+        margin: 0 1rem;
+        margin-bottom: 4rem;
+    }
 }
