--- a/css/main.css
+++ b/css/main.css
@@ -285,16 +285,18 @@ body::after {
 .portal-card-image::after {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 0.5rem;
+    left: 0.5rem;
+    width: calc(100% - 1rem);
+    height: calc(100% - 1rem);
     background: radial-gradient(circle at bottom,
         transparent 0%,
         rgba(0, 0, 0, 0.9) 40%);
     transform: scale(1);
     transform-origin: bottom;
     transition: transform 0.5s ease-out;
+    border-radius: 0.875rem;
+    overflow: hidden;
 }
 
 .portal-card-image img {
